--- a/ENTREGA 3/FRONTEND/package.json
+++ b/ENTREGA 3/FRONTEND/package.json
@@ -19,7 +19,8 @@
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
